# Integhra-Pomp.ia

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.actions  Dockerfile.bot  Dockerfile.gpu  Dockerfile.rasa  Makefile  Modelfile  README.md  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.ollama.yml  docker-compose.pompi.yml  docker-compose.yml  domain.yml  intents_config.yml  project_context.json  pyproject.toml  requirements-actions.txt  requirements-bot.txt  unrecognized_messages.csv
actions/: __init__.py  actions.py  actions_ayuda.py  actions_busqueda.py  actions_confneg.py  actions_context_validation.py  actions_despedida.py  actions_fallback.py  actions_generica.py  actions_helper.py  actions_outofcontext.py  actions_recomendaciones.py  actions_smalltalk.py  api_client.py  config.py  conversation_state.py  dockerfile.yml  helpers.py  logger.py
bot/: config.yml  context_generator.py  contexto_agente.json  domain.yml  logging.yml  main.py  pyproject.toml  rasa_project_files.json
bot/data/: categoria_lookup.csv  compuesto_lookup.csv  entities.yml  entities_regex.yml  lookup_tables.yml  nlu.yml  nlu_copia.yml  product.csv  producto_lookup.csv  proveedor_lookup.csv  regex_entities.yml  regex_features.yml  rules.yml  script.py  stories.yml  synonyms.yml
bot/data/nlu/: fix_nlu.py  nlu_basics.yml  nlu_busquedas copy.yml  nlu_busquedas.yml  nlu_fuera_contexto.yml  nlu_modificaciones copy.yml  nlu_modificaciones.yml
bot/data/regex/: fecha.txt  moneda.txt
bot/entrenador/: data_generator.py  entidades.py  examples_generator.py  exporter.py  importer.py  intents_config.yml  lookup_generator.py  templates.py  train.py
bot/entrenador/data_generator/: domain_generator.py  nlu_generator.py  stories_generator.py
context/: context_config.yml  data_generator.py  entidades.yml  entity_loaders.py  example.py  examples.yml  intent_processors.py  lookup_generator_from_entities.py  nlu_comprehensive.yml  nlu_config.py  nlu_generator.py  regex_generator.py  responses.yml  segments.yml  templates.yml  test.py  test_stories.yml  training_limits.yml  validators.py
data/: category.csv  enterprise.csv  nlu.yml  offer.csv  offer_product.csv  rules.yml  synonyms.yml
entrenador/: generator.py  lookup.py  paraphraser.py  utils.py
hybrid_nlu/: groq_client.py
intents/: afirmar.yml  agradecer.yml  buscar_oferta.yml  buscar_producto.yml  completar_pedido.yml  denegar.yml  despedida.yml  fuera_aplicacion.yml  pedir_chiste.yml  preguntar_cómo_estás.yml  reirse_chiste.yml  responder_como_estoy.yml  responder_estoy_bien.yml  saludo.yml
scripts/: chat_console.py  config_loader.py  consola_remota.py  (+6 more)
(+300 files in other folders)
