[project]
name = "pomp-ia"
version = "0.1.0"
description = ""
authors = [
    {name = "Ariel-Hab",email = "ari.habib.arg@gmail.com"}
]
readme = "README.md"
requires-python = "3.10"
dependencies = [
    "pandas (>=1.5.3,<2.0.0)",
    "transformers (>=4.54.1,<5.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "sacremoses (>=0.1.1,<0.2.0)",
    "unidecode (>=1.4.0,<2.0.0)",
]

[tool.poetry]
packages = [{include = "pomp"}]

[tool.poetry.group.dev.dependencies]
rasa = "^3.6.21"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
