[tool.poetry]
name = "pomp-ia"
version = "0.1.0"
description = ""
authors = ["Ariel-Hab <ari.habib.arg@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9.0,<3.11"
pandas = ">=1.5.3,<2.0.0"
transformers = ">=4.54.1,<5.0.0"
torch = ">=2.7.1,<3.0.0"
sentencepiece = ">=0.2.0,<0.3.0"
sacremoses = ">=0.1.1,<0.2.0"
unidecode = ">=1.4.0,<2.0.0"
rasa-sdk = "^3.6.1"  # lo pasamos a producción para evitar fallback pip install

[tool.poetry.group.dev.dependencies]
rasa = "^3.6.21"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
